fixed spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,8 @@
 .App{
   display: flex;
   justify-content: center;
-  
+  padding-top: 5em;
+
   
 }
 body{
@@ -13,4 +14,7 @@ body{
 }
 button{
   cursor:pointer
+}
+button:active{
+  transform: scale(0.9);
 }
